<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/weeklyTop10"
            style="@style/MusicCategoryStyle"
            android:background="@color/category_weeklyTop10"
            android:text="@string/category_weeklyTop10" />

        <TextView
            android:id="@+id/todayTop10"
            style="@style/MusicCategoryStyle"
            android:background="@color/category_todayTop10"
            android:text="@string/category_todayTop10" />

        <TextView
            android:id="@+id/globalTop10"
            style="@style/MusicCategoryStyle"
            android:background="@color/category_globalTop10"
            android:text="@string/category_globalTop10" />

        <TextView
            android:id="@+id/trendingIndia"
            style="@style/MusicCategoryStyle"
            android:background="@color/category_trendingIndia"
            android:text="@string/category_trendingIndia" />

        <TextView
            android:id="@+id/UStop10"
            style="@style/MusicCategoryStyle"
            android:background="@color/category_UStop10"
            android:text="@string/category_UStop10" />
    </LinearLayout>

</ScrollView>